# cpp_coursework

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
include/: intercept_usp.hpp
src/: intercept_usb.cpp
